<resources>
    <string name="app_name">Corkboard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_events">Events</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_event_details">Event Details</string>
    <string name="rsvp_button">RSVP</string>
    <string name="event_details_content">EVENT\nDETAILS</string>
    <string name="groups_button">Event Details</string>
    <string name="events_button">Events</string>
    <string name="faculty_button">Faculty</string>
    <string name="my_subs_button">My Subs</string>
    <string name="clubs_button">Clubs</string>
    <string name="food_truck_button">Food Truck Rally</string>
    <string name="soccer_button">Intramural Soccer Game</string>
    <string name="poly_hacks_button">Poly Hacks</string>
    <string name="antihazing_button">Anti-Hazing Meeting</string>
    <string name="stem_day_button">STEM Day</string>
    <string name="pi_run_button">Pi Run</string>
    <string name="gallery_fragment_text">Gallery Fragment!</string>
    <string name="polycon_button">Polycon</string>
    <string name="steam_button">S.T.E.A.M.</string>
    <string name="sga_button">SGA</string>
    <string name="faculty_events_fragment">Faculty Events Fragment!</string>
    <string name="dummy_button">RSVP</string>
    <string name="dummy_content">EVENT\nDETAILS</string>
    <string name="title_activity_settings">Settings</string>
    <string name="subscriptions_events_fragment_text">Subscriptions Events Fragment!</string>
    <string name="club_events_fragment_text">Club Events Fragment!</string>
    <string name="subscriptions_fragment_text">Subscriptions Fragment!</string>
    <string name="clubs_fragment_groups_text">Clubs Fragment!</string>
    <string name="faculty_groups_fragment_text">Faculty Fragment!</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="large_text">
        <b><u>"Title:\n\n"</u></b>

        "Food Truck Rally\n\n\n\n"

        <b><u>"Date:\n\n"</u></b>

        "Second Thursday of every month\n\n\n\n"

        <b><u>"Time:\n\n"</u></b>

        "6:00 - 9:00 P.M.\n\n\n\n"

        <b><u>"Location:\n\n"</u></b>

        "Downtown Lakeland\n\n\n\n"

        <b><u>"Description:\n\n"</u></b>

        "Come visit beautiful Downtown Lakeland, have some great food and mingle with the locals!\n\n\n\n"

        <b><u>"Tags:\n\n"</u></b>

        "Food, Food Truck Rally, Downtown, Bus, Evening, Universities, etc.\n\n"
    </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
