<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true">

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/group1Button"
        android:layout_gravity="left|top"
        android:layout_marginTop="60dp"
        android:text="@string/food_truck_button"
        android:background="#3F51B5"
        android:textColor="#ffffff"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/soccer_button"
        android:id="@+id/group2Button"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="60dp"
        android:background="#3F51B5"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/poly_hacks_button"
        android:id="@+id/group3Button"
        android:layout_gravity="right|top"
        android:layout_marginTop="60dp"
        android:background="#3F51B5"
        android:textColor="#ffffff"
        android:layout_marginRight="10dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/antihazing_button"
        android:id="@+id/group4Button"
        android:layout_gravity="left|center_vertical"
        android:background="#3F51B5"
        android:textColor="#ffffff"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/stem_day_button"
        android:id="@+id/group5Button"
        android:layout_gravity="center"
        android:background="#3F51B5"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/pi_run_button"
        android:id="@+id/group6Button"
        android:layout_gravity="right|center_vertical"
        android:background="#3F51B5"
        android:textColor="#ffffff"
        android:layout_marginRight="10dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/polycon_button"
        android:id="@+id/group7Button"
        android:layout_gravity="left|bottom"
        android:layout_marginBottom="60dp"
        android:background="#3F51B5"
        android:textColor="#ffffff"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/steam_button"
        android:id="@+id/group8Button"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="60dp"
        android:background="#3F51B5"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/sga_button"
        android:id="@+id/group9Button"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="60dp"
        android:background="#3F51B5"
        android:textColor="#ffffff"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/subscriptions_events_fragment_text"
        android:id="@+id/textView4"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp" />


</FrameLayout>