<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/my_subs_button"
        android:id="@+id/mySubsButton"
        android:layout_marginBottom="51dp"
        android:layout_above="@+id/clubsButton"
        android:layout_centerHorizontal="true"
        android:background="#3F51B5"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="125dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/faculty_button"
        android:id="@+id/facultyButton"
        android:layout_alignTop="@+id/clubsButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="51dp"
        android:layout_marginEnd="51dp"
        android:textColor="#ffffff"
        android:background="#3F51B5"
        android:layout_gravity="right|center_vertical"
        android:layout_marginTop="51dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/clubs_button"
        android:id="@+id/clubsButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:textColor="#ffffff"
        android:background="#3F51B5"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Main Fragment!"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="51dp" />
</FrameLayout>